# python-mastery-portfolio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruffignore  COMPLETION_REPORT.md  CONTRIBUTING.md  Dockerfile  FILE_INVENTORY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PATTERNS.md  PROFILE_README_DRAFT.md  README.md  docker-compose.yml  noxfile.py  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bench.yml  ci.yml  codecov.yml  publish-testpypi.yml  python-tests.yml
archive/benchmarks/: benchmark_fib.py
archive/examples/: api_embeddings_demo.ipynb  streamlit_demo.py
benchmarks/: benchmark_fib.py
cdk/: README.md  app.py  portfolio_stack.py  requirements.txt
demo/: README.md  streamlit_app.py  streamlit_metrics.py
demo/.streamlit/: secrets.toml.example
examples/: api_embeddings_demo.ipynb  streamlit_demo.py
src/python_mastery_portfolio/: __init__.py  algorithms.py  api.py  caching.py  cli.py  config.py  connectors.py  decorators.py  di_container.py  doc_qa.py  embeddings.py  examples.py  excel_tools.py  exceptions.py  logging_utils.py  ml_pipeline.py  ml_utils.py  monitor.py  qa_eval.py  system_metrics.py  typing_utils.py  utils.py  vin.py  websocket_manager.py
tests/: test_advanced_features.py  test_algorithms.py  test_api.py  test_api_health.py  test_api_metrics.py  test_caching_ttl.py  test_cli.py  test_cli_benchmark_sparkline.py  test_cli_fib_ascii.py  test_cli_json_output.py  test_cli_version.py  test_config.py  test_connectors.py  test_coverage_boost.py  test_doc_qa.py  test_doc_qa_config.py  test_doc_qa_service.py  test_embeddings.py  test_embeddings_optional.py  test_excel_api.py  test_excel_tools.py  test_fortune.py  test_meta_explain.py  test_metrics.py  test_ml_api.py  test_ml_pipeline.py  test_ml_pipeline_flags.py  test_ml_utils.py  test_monitor.py  test_qa_eval.py  test_rate_limit.py  test_reproducer_header.py  test_tip.py  test_utils.py  test_vin.py  test_vin_extras.py  test_websocket_manager.py  test_websocket_monitoring.py
tools/: bump_version.py  dev.ps1  run_fib_ascii.py  run_tests.ps1
